# pysophoscentralapi

./: .gitignore  ASYNC_SYNC_DECISION.md  LICENSE  PACKAGE_RELEASE_INSTRUCTIONS.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.0.md  change-log.md  coverage.json  goal.md  pyproject.toml  pytest.ini  requirements-development.piptools  requirements.piptools  ruff.toml
docs/: api-credentials.md  contributing.md  getting-started.md  index.md
docs/api/: index.md
docs/examples/: index.md
docs/guides/: cli-guide.md
plans/: PHASE10_SUMMARY.md  PHASE9_SUMMARY.md  PHASE_STATUS.md  README.md  api-coverage-matrix.md  architecture-diagrams.md  development-workflow.md  project-plan.md  sync-implementation-guide.md  technical-specification.md
src/pysophoscentralapi/: __init__.py  __version__.py
src/pysophoscentralapi/api/: __init__.py
src/pysophoscentralapi/api/common/: __init__.py  admins.py  alerts.py  models.py  roles.py  tenants.py
src/pysophoscentralapi/cli/: __init__.py  common_cmds.py  config.py  endpoint_cmds.py  main.py  output.py  utils.py
src/pysophoscentralapi/core/: __init__.py  auth.py  client.py  config.py  exceptions.py  models.py  pagination.py
src/pysophoscentralapi/exporters/: __init__.py  base.py  csv_exporter.py  json_exporter.py  progress.py
src/pysophoscentralapi/filters/: __init__.py  base.py  builder.py  pagination.py  search.py  sorting.py
src/pysophoscentralapi/sync/: __init__.py  client.py  common.py  endpoint.py  pagination.py  utils.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py
tests/unit/test_api/: __init__.py
tests/unit/test_cli/: test_cli_basic.py
tests/unit/test_core/: test_auth.py  test_client.py  test_config.py  test_exceptions.py  test_models.py  test_pagination.py
tests/unit/test_exporters/: __init__.py  test_csv_exporter.py  test_json_exporter.py  test_progress.py
tests/unit/test_filters/: __init__.py  test_filter_builder.py  test_pagination.py  test_search.py  test_sorting.py
tests/unit/test_sync/: __init__.py  test_sync_wrappers.py
(+13 files in other folders)
