[project]
name = "pysophoscentralapi"
version = "0.1.0"
description = "Python library and CLI for interacting with Sophos Central APIs (Endpoint and Common APIs)"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["sophos", "api", "security", "endpoint", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
]

dependencies = [
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "colorama>=0.4.6",
    "tomli>=2.0.1; python_version < '3.11'",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "faker>=22.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "ipython>=8.20.0",
]

[project.scripts]
pysophos = "pysophoscentralapi.cli.main:cli"

[project.urls]
Homepage = "https://github.com/yourusername/pysophoscentralapi"
Documentation = "https://pysophoscentralapi.readthedocs.io"
Repository = "https://github.com/yourusername/pysophoscentralapi"
Issues = "https://github.com/yourusername/pysophoscentralapi/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pysophoscentralapi = ["py.typed"]

